--- a/package.json
+++ b/package.json
@@ -2,38 +2,40 @@
   "name": "eco-pages",
   "version": "0.0.1",
   "scripts": {
-    "dev": "nodemon",
-    "build": "bun run --hot bun.build.ts --static & bun run eco.builder.ts",
-    "wds:server": "wds --root-dir dist --port 3000 --watch",
-    "server": "bun run --hot eco.server.ts"
+    "dev": "bun run watch:generate-css & bun run watch:build & bun run server",
+    "build": "bun run eco.builder.ts",
+    "server": "bun run eco.server.ts",
+    "generate-css": "bun run tasks/generate-css.ts",
+    "watch:build": "bun run eco.builder.ts --watch",
+    "watch:generate-css": "bun run tasks/generate-css.ts --watch"
   },
   "dependencies": {
-    "@11ty/is-land": "^3.0.0",
-    "@elysiajs/html": "^0.7.3",
-    "@elysiajs/static": "^0.7.1",
-    "@elysiajs/stream": "^0.7.2",
-    "@kitajs/ts-html-plugin": "^1.3.3",
-    "@lit-labs/ssr": "^3.2.0",
-    "bun-html-live-reload": "^0.1.2",
-    "chokidar": "^3.5.3",
-    "elysia": "latest",
-    "i": "^0.3.7",
-    "import-fresh": "^3.3.0",
-    "lit": "^3.1.0",
-    "npm": "^10.3.0"
+    "@luncheon/esbuild-plugin-gzip": "^0.1.0",
+    "alpinejs": "^3.13.3",
+    "compressible": "^2.0.18",
+    "elysia-compression": "^0.0.7"
   },
   "devDependencies": {
+    "@11ty/is-land": "^3.0.0",
+    "@elysiajs/html": "^0.7.3",
+    "@elysiajs/static": "^0.8.1",
+    "@gtrabanco/elysia-hmr-html": "1.0.0",
+    "@kitajs/ts-html-plugin": "^1.3.3",
     "@open-wc/dev-server-hmr": "next",
+    "@types/alpinejs": "^3.13.6",
+    "@types/compressible": "^2.0.2",
     "@types/postcss-import": "^14.0.3",
     "@web/dev-server": "^0.4.1",
     "@webcomponents/template-shadowroot": "^0.2.1",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
+    "chokidar": "^3.5.3",
     "cssnano": "^6.0.2",
+    "elysia": "latest",
     "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.1"
   },
   "module": "src/index.js",
   "repository": "https://github.com/andeeplus/elysia-lit-ssr.git"
