--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "eco-pages",
   "version": "0.0.1",
   "scripts": {
-    "dev": "bun run watch:generate-css & bun run watch:build & bun run watch:wds & bun run watch:tailwind",
-    "build": "bun run lib/eco.builder.ts",
+    "dev": "bun run watch:build-css & bun run watch:build & bun run watch:wds",
+    "build": "bun run lib/scripts/bundle-all.ts",
     "build-config": "bun run lib/eco.config.ts",
-    "generate-css": "bun run lib/tasks/generate-css.ts",
+    "build-css": "bun run lib/scripts/bundle-css.ts",
     "preview": "bun run build && bun run serve:build",
     "serve:build": "wds --config lib/web-dev-server/config.mjs",
-    "watch:build": "bun run lib/eco.builder.ts --watch",
-    "watch:generate-css": "bun run lib/tasks/generate-css.ts --watch",
-    "watch:wds": "wds --config lib/web-dev-server/config.mjs --watch",
-    "watch:tailwind": "bunx tailwindcss -i src/global/css/tailwind.css -o dist/global/css/tailwind.css --watch"
+    "watch:build": "bun run lib/scripts/bundle-all.ts --watch tailwindcss",
+    "watch:build-css": "bun run lib/scripts/bundle-css.ts --watch tailwindcss",
+    "watch:wds": "wds --config lib/web-dev-server/config.mjs --watch"
   },
   "devDependencies": {
     "@11ty/is-land": "^3.0.0",
