--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "eco-pages",
   "version": "0.0.1",
   "scripts": {
-    "dev": "bun run watch:build-css & bun run watch:build & bun run watch:wds",
+    "dev": "bun run watch:build & bun run watch:wds",
     "build": "bun run lib/scripts/bundle-all.ts",
     "build-config": "bun run lib/eco.config.ts",
-    "build-css": "bun run lib/scripts/bundle-css.ts",
-    "preview": "bun run build && bun run serve:build",
-    "serve:build": "wds --config lib/web-dev-server/config.mjs",
-    "watch:build": "bun run lib/scripts/bundle-all.ts --watch tailwindcss",
-    "watch:build-css": "bun run lib/scripts/bundle-css.ts --watch tailwindcss",
+    "preview": "bun run build && bun run serve:wds",
+    "serve:wds": "wds --config lib/web-dev-server/config.mjs",
+    "watch:build": "bun run lib/scripts/bundle-all.ts --watch",
     "watch:wds": "wds --config lib/web-dev-server/config.mjs --watch"
   },
   "devDependencies": {
