--- a/package.json
+++ b/package.json
@@ -12,26 +12,20 @@
   },
   "devDependencies": {
     "@11ty/is-land": "^3.0.0",
-    "@elysiajs/html": "^0.7.3",
-    "@elysiajs/static": "^0.8.1",
-    "@gtrabanco/elysia-hmr-html": "1.0.0",
+    "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
-    "@open-wc/dev-server-hmr": "^0.2.0",
     "@types/alpinejs": "^3.13.6",
     "@types/postcss-import": "^14.0.3",
     "@web/dev-server": "^0.4.1",
-    "@webcomponents/template-shadowroot": "^0.2.1",
     "alpinejs": "^3.13.3",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
     "chokidar": "^3.5.3",
     "cssnano": "^6.0.2",
-    "elysia": "latest",
-    "nodemon": "^3.0.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.4.1"
   },
   "module": "src/index.js",
-  "repository": "https://github.com/andeeplus/elysia-lit-ssr.git"
+  "repository": "https://github.com/andeeplus/eco-pages.git"
 }
