--- a/package.json
+++ b/package.json
@@ -2,25 +2,24 @@
   "name": "eco-pages",
   "version": "0.0.1",
   "scripts": {
-    "dev": "bun run watch:build & bun run watch:wds",
-    "build": "bun run lib/scripts/bundle-all.ts",
-    "build-config": "bun run lib/eco.config.ts",
-    "preview": "bun run build && bun run serve:wds",
-    "serve:wds": "wds --config lib/web-dev-server/config.mjs",
-    "watch:build": "bun run lib/scripts/bundle-all.ts --watch",
-    "watch:wds": "wds --config lib/web-dev-server/config.mjs --watch"
+    "dev": "eco-pages dev",
+    "build": "eco-pages build",
+    "preview": "eco-pages preview",
+    "clean": "rm -rf dist node_modules bun.lockb && bun install && bun run simulate-lib",
+    "simulate-lib": "bun run cli/simulate-lib.ts"
   },
   "devDependencies": {
     "@11ty/is-land": "^3.0.0",
     "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
+    "@parcel/watcher": "^2.4.0",
     "@types/alpinejs": "^3.13.6",
     "@types/postcss-import": "^14.0.3",
     "@web/dev-server": "^0.4.1",
     "alpinejs": "^3.13.3",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
-    "chokidar": "^3.5.3",
+    "concurrently": "^8.2.2",
     "cssnano": "^6.0.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
