--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "eco-pages dev",
     "build": "eco-pages build",
     "preview": "eco-pages preview",
-    "clean": "rm -rf dist node_modules bun.lockb && bun install && bun run simulate-lib",
+    "clean": "rm -rf .eco node_modules bun.lockb && bun install && bun run simulate-lib",
     "simulate-lib": "bun run lib/cli/simulate-lib.ts"
   },
   "devDependencies": {
