--- a/package.json
+++ b/package.json
@@ -9,18 +9,16 @@
     "simulate-lib": "bun run lib/cli/simulate-lib.ts"
   },
   "devDependencies": {
-    "@11ty/is-land": "^3.0.0",
     "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
     "@parcel/watcher": "^2.4.0",
     "@types/alpinejs": "^3.13.6",
     "@types/postcss-import": "^14.0.3",
-    "@web/dev-server": "^0.4.1",
     "alpinejs": "^3.13.3",
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
-    "concurrently": "^8.2.2",
     "cssnano": "^6.0.2",
+    "lit": "^3.1.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
     "tailwindcss": "^3.4.1"
