--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "lit": "^3.1.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
+    "shiki": "^1.1.2",
     "tailwindcss": "^3.4.1"
   },
   "module": "src/index.js",
