--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "simulate-lib": "bun run lib/cli/simulate-lib.ts"
   },
   "devDependencies": {
+    "@happy-dom/global-registrator": "^13.3.8",
     "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
     "@parcel/watcher": "^2.4.0",
