--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "autoprefixer": "^10.4.16",
     "bun-types": "latest",
     "cssnano": "^6.0.2",
-    "lit": "^3.1.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
     "shiki": "^1.1.2",
     "tailwindcss": "^3.4.1"
   },
   "module": "src/index.js",
-  "repository": "https://github.com/andeeplus/eco-pages.git"
+  "repository": "https://github.com/andeeplus/eco-pages.git",
+  "dependencies": {
+    "@types/jsdom": "^21.1.6"
+  }
 }
