--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "simulate-lib": "bun run lib/cli/simulate-lib.ts"
   },
   "devDependencies": {
-    "@happy-dom/global-registrator": "^13.3.8",
     "@kitajs/html": "^3.0.11",
     "@kitajs/ts-html-plugin": "^1.3.3",
     "@parcel/watcher": "^2.4.0",
@@ -25,8 +24,5 @@
     "tailwindcss": "^3.4.1"
   },
   "module": "src/index.js",
-  "repository": "https://github.com/andeeplus/eco-pages.git",
-  "dependencies": {
-    "@types/jsdom": "^21.1.6"
-  }
+  "repository": "https://github.com/andeeplus/eco-pages.git"
 }
