--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,8 +20,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@eco-pages/core": ["./lib"],
-      "root/*": ["./*"]
+      "root/*": ["./*"],
+      "@eco-pages/core": ["./lib"]
     },
     "plugins": [
       {
