feature/fs-router refactored build, added objects to handle build instead of functions, cleaned up scaffolding, added start command to run a server

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev:playground": "bun run workspace packages/playground dev",
     "build:playground": "bun run workspace packages/playground build",
+    "start:playground": "bun run workspace packages/playground start",
     "preview:playground": "bun run workspace packages/playground preview",
     "clean": "rm -rf .eco node_modules bun.lockb && bun install",
     "workspace": "bun ./scripts/workspace.ts"
