--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,9 @@
     "cssnano": "^6.0.2",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "@lit-labs/ssr": "^3.2.2",
+    "lit": "^3.1.2"
   },
   "repository": "https://github.com/andeeplus/eco-pages.git"
 }
