--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -13,7 +13,8 @@
     "alpinejs": "^3.13.3",
     "bun-types": "latest",
     "shiki": "^1.1.2",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "lit": "^3.1.2"
   },
   "repository": "https://github.com/andeeplus/eco-pages.git"
 }
