--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@eco-pages/eco-pages",
+  "name": "@eco-pages/core",
   "version": "0.0.1",
   "bin": {
     "eco-pages": "./cli/eco-pages.ts"
@@ -9,8 +9,8 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
-    "@kitajs/html": "^3.1.2",
-    "@kitajs/ts-html-plugin": "^1.3.3",
+    "@kitajs/html": "^4.1.0",
+    "@kitajs/ts-html-plugin": "^4.0.1",
     "@parcel/watcher": "^2.4.0",
     "@types/postcss-import": "^14.0.3",
     "autoprefixer": "^10.4.16",
