--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,26 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
-    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "esModuleInterop": true,
     "experimentalDecorators": true,
-    "jsxFactory": "Html.createElement",
-    "jsxFragmentFactory": "Html.Fragment",
-    "useDefineForClassFields": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "@kitajs/html",
     "module": "ESNext",
     "moduleResolution": "node",
-    "types": ["bun-types"],
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
     "noImplicitOverride": true,
-    "verbatimModuleSyntax": true,
-    "baseUrl": "."
+    "plugins": [
+      {
+        "name": "@kitajs/ts-html-plugin"
+      }
+    ],
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "ES2021",
+    "types": ["bun-types"],
+    "useDefineForClassFields": true,
+    "verbatimModuleSyntax": true
   }
 }
