feature/starter-package Added starter package

--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
 		"build:playground": "bun run workspace packages/playground build",
 		"start:playground": "bun run workspace packages/playground start",
 		"preview:playground": "bun run workspace packages/playground preview",
+		"dev:starter": "bun run workspace packages/starter dev",
+		"build:starter": "bun run workspace packages/starter build",
+		"start:starter": "bun run workspace packages/starter start",
+		"preview:starter": "bun run workspace packages/starter preview",
 		"clean": "rm -rf .eco node_modules bun.lockb && bun install",
 		"workspace": "bun ./scripts/workspace.ts",
-		"format": "bunx @biomejs/biome format . --write",
+		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
 		"lint-staged": "lint-staged"
 	},
