feature/script-bundler Improved bundle including process postcss in the js file itself using a plugin to process the import as string instead of referencing the css loaded as chunk and converted on the fly with preload.

--- a/packages/core/bunfig.toml
+++ b/packages/core/bunfig.toml
@@ -1,4 +1,4 @@
 preload = [
-  "./src/plugins/inline-postcss.loader.ts",
-  "./src/plugins/mdx.loader.ts",
+  "./src/loaders/inline-postcss.loader.ts",
+  "./src/loaders/mdx.loader.ts",
 ]
