--- a/packages/playground/tsconfig.json
+++ b/packages/playground/tsconfig.json
@@ -22,7 +22,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ES2021",
-		"types": ["bun-types", "@eco-pages/core"],
+		"types": ["@eco-pages/core"],
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
 	}
