feature/scripts-injector Moved scripts injector to package to avoid code duplication + fixed env issues

--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"dev:playground": "bun run workspace packages/playground dev",
-		"build:playground": "bun run workspace packages/playground build",
-		"start:playground": "bun run workspace packages/playground start",
-		"preview:playground": "bun run workspace packages/playground preview",
-		"dev:starter": "bun run workspace packages/starter dev",
-		"build:starter": "bun run workspace packages/starter build",
-		"start:starter": "bun run workspace packages/starter start",
-		"preview:starter": "bun run workspace packages/starter preview",
+		"dev:playground": "bun run --filter @eco-pages/playground dev",
+		"build:playground": "bun run --filter @eco-pages/playground build",
+		"start:playground": "bun run --filter @eco-pages/playground start",
+		"preview:playground": "bun run --filter @eco-pages/playground preview",
+		"dev:starter": "bun run --filter @eco-pages/starter dev",
+		"build:starter": "bun run --filter @eco-pages/starter build",
+		"start:starter": "bun run --filter @eco-pages/starter start",
+		"preview:starter": "bun run --filter @eco-pages/starter preview",
+		"prepare:lib": "bun run --filter @eco-pages/scripts-injector build:lib",
 		"clean": "rm -rf .eco node_modules bun.lockb && bun install",
 		"workspace": "bun ./scripts/workspace.ts",
 		"format": "bunx @biomejs/biome format --write .",
