--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,6 +9,7 @@
 	},
 	"devDependencies": {
 		"@eco-pages/core": "workspace:*",
+		"@eco-pages/scripts-injector": "workspace:*",
 		"@types/alpinejs": "^3.13.6",
 		"alpinejs": "^3.13.10",
 		"shiki": "^1.1.2",
