--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -12,7 +12,7 @@
 		"noImplicitOverride": true,
 		"paths": {
 			"@/*": ["./src/*"],
-			"@types": ["./src/eco-pages.ts"]
+			"@types": ["./src/index.d.ts"]
 		},
 		"plugins": [
 			{
@@ -23,7 +23,7 @@
 		"skipLibCheck": true,
 		"strict": true,
 		"target": "ES2021",
-		"types": ["bun-types", "./src/env.d.ts"],
+		"types": ["bun-types", "./src/index.d.ts"],
 		"useDefineForClassFields": true,
 		"verbatimModuleSyntax": true
 	}
