feature/app-logger added tests for app logger

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"clean": "rm -rf .eco node_modules bun.lockb && bun install",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
-		"lint-staged": "lint-staged"
+		"lint-staged": "lint-staged",
+		"test": "NODE_ENV=development bun test"
 	},
 	"devDependencies": {
 		"husky": "^9.0.10",
