feature/3 All integrations have been refactored to consider only the extensions, not the descriptors. The extensions have been updated to incorporate the descriptors.

--- a/packages/core/fixtures/app/bunfig.toml
+++ b/packages/core/fixtures/app/bunfig.toml
@@ -1,4 +1,4 @@
 preload = [
-  "../../src/loaders/inline-postcss.loader.ts",
-  "../../src/loaders/mdx.loader.ts",
+  "@eco-pages/core/src/loaders/inline-postcss.loader.ts",
+  "@eco-pages/core/src/loaders/mdx.loader.ts",
 ]
