--- a/bunfig.toml
+++ b/bunfig.toml
@@ -1,4 +1,4 @@
 preload = [
-  "@eco-pages/core/src/loaders/inline-postcss.loader.ts",
-  "@eco-pages/core/src/loaders/mdx.loader.ts",
+  "../pacakges/core/src/loaders/inline-postcss.loader.ts",
+  "../pacakges/core/src/loaders/mdx.loader.ts",
 ]
