--- a/bunfig.toml
+++ b/bunfig.toml
@@ -2,3 +2,9 @@ preload = [
   "../pacakges/core/src/loaders/inline-postcss.loader.ts",
   "../pacakges/core/src/loaders/mdx.loader.ts",
 ]
+
+[test]
+preload = [
+  "@eco-pages/core/src/loaders/inline-postcss.loader.ts",
+  "@eco-pages/core/src/loaders/mdx.loader.ts",
+]
