--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,15 +18,7 @@
 		"postcss-import": "^15.1.0",
 		"tailwindcss": "^3.4.1",
 		"@lit-labs/ssr": "^3.2.2",
-		"lit": "^3.1.3",
-		"@types/react": "npm:types-react@beta",
-		"@types/react-dom": "npm:types-react-dom@beta",
-		"react": "^19.0.0-beta-1beb73de0f-20240503",
-		"react-dom": "^19.0.0-beta-1beb73de0f-20240503"
-	},
-	"overrides": {
-		"@types/react": "npm:types-react@beta",
-		"@types/react-dom": "npm:types-react-dom@beta"
+		"lit": "^3.1.3"
 	},
 	"repository": "https://github.com/andeeplus/eco-pages.git"
 }
