--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -11,11 +11,12 @@
 		"@kitajs/html": "^4.1.0",
 		"@eco-pages/core": "workspace:*",
 		"@eco-pages/scripts-injector": "workspace:*",
+		"@eco-pages/kitajs": "workspace:*",
+		"@eco-pages/lit": "workspace:*",
+		"@eco-pages/mdx": "workspace:*",
 		"@types/alpinejs": "^3.13.6",
 		"alpinejs": "^3.13.10",
-		"shiki": "^1.1.2",
-		"tailwindcss": "^3.4.1",
-		"lit": "^3.1.2"
+		"shiki": "^1.1.2"
 	},
 	"repository": "https://github.com/andeeplus/eco-pages.git"
 }
