--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
 		"build:docs": "bun run --filter @eco-pages/docs build",
 		"start:docs": "bun run --filter @eco-pages/docs start",
 		"preview:docs": "bun run --filter @eco-pages/docs preview",
+		"dev:react-app": "bun run --filter @eco-pages/react-app dev",
+		"build:react-app": "bun run --filter @eco-pages/react-app build",
+		"start:react-app": "bun run --filter @eco-pages/react-app start",
+		"preview:react-app": "bun run --filter @eco-pages/react-app preview",
 		"prepare:lib": "bun run --filter @eco-pages/scripts-injector build:lib",
 		"clean": "rm -rf .eco node_modules bun.lockb && bun install",
 		"format": "bunx @biomejs/biome format --write .",
