feat(#21): Reorganized project folders for better structure, Moved all integration-related files into a new 'integrations' directory for improved navigability and maintainability.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
 	},
 	"module": "src/index.js",
 	"repository": "https://github.com/andeeplus/eco-pages.git",
-	"workspaces": ["packages/*", "examples/*", "apps/*"],
+	"workspaces": [
+		"packages/*",
+		"packages/integrations/*",
+		"examples/*",
+		"apps/*"
+	],
 	"type": "module"
 }
