--- a/apps/docs-lite-elements/tsconfig.json
+++ b/apps/docs-lite-elements/tsconfig.json
@@ -8,7 +8,7 @@
 		"jsx": "react-jsx",
 		"jsxImportSource": "@kitajs/html",
 		"module": "ESNext",
-		"moduleResolution": "node",
+		"moduleResolution": "Bundler",
 		"noImplicitOverride": true,
 		"paths": {
 			"@/*": ["./src/*"]
