--- a/packages/lite-elements/package.json
+++ b/packages/lite-elements/package.json
@@ -2,10 +2,87 @@
 	"name": "@eco-pages/lite-elements",
 	"version": "0.0.1",
 	"repository": "https://github.com/andeeplus/eco-pages.git",
-	"main": "src/index.ts",
 	"type": "module",
+	"main": "dist/index.js",
+	"files": ["dist"],
+	"scripts": {
+		"build:lib": "bun run clean && bun run build:files && bun run build:types",
+		"build:files": "bun run ./build.ts",
+		"build:types": "tsc && tsc-alias",
+		"clean": "rm -rf ./dist"
+	},
+	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"default": "./dist/index.js"
+		},
+		"./context/createContext": {
+			"types": "./dist/context/createContext.d.ts",
+			"default": "./dist/context/createContext.js"
+		},
+		"./context/ContextProvider": {
+			"types": "./dist/context/ContextProvider.d.ts",
+			"default": "./dist/context/ContextProvider.js"
+		},
+		"./context/consumeContext": {
+			"types": "./dist/context/decorators/consumeContext.d.ts",
+			"default": "./dist/context/decorators/consumeContext.js"
+		},
+		"./context/provideContext": {
+			"types": "./dist/context/decorators/provideContext.d.ts",
+			"default": "./dist/context/decorators/provideContext.js"
+		},
+		"./context/contextSelector": {
+			"types": "./dist/context/decorators/contextSelector.d.ts",
+			"default": "./dist/context/decorators/contextSelector.js"
+		},
+		"./LiteElement": {
+			"types": "./dist/core/LiteElement.d.ts",
+			"default": "./dist/core/LiteElement.js"
+		},
+		"./decorators/customElement": {
+			"types": "./dist/decorators/customElement.d.ts",
+			"default": "./dist/decorators/customElement.js"
+		},
+		"./decorators/onEvent": {
+			"types": "./dist/decorators/onEvent.d.ts",
+			"default": "./dist/decorators/onEvent.js"
+		},
+		"./decorators/onUpdated": {
+			"types": "./dist/decorators/onUpdated.d.ts",
+			"default": "./dist/decorators/onUpdated.js"
+		},
+		"./decorators/querySelector": {
+			"types": "./dist/decorators/querySelector.d.ts",
+			"default": "./dist/decorators/querySelector.js"
+		},
+		"./decorators/querySelectorAll": {
+			"types": "./dist/decorators/querySelectorAll.d.ts",
+			"default": "./dist/decorators/querySelectorAll.js"
+		},
+		"./decorators/reactiveField": {
+			"types": "./dist/decorators/reactiveField.d.ts",
+			"default": "./dist/decorators/reactiveField.js"
+		},
+		"./decorators/reactiveProp": {
+			"types": "./dist/decorators/reactiveProp.d.ts",
+			"default": "./dist/decorators/reactiveProp.js"
+		},
+		"./mixins/WithKita": {
+			"types": "./dist/mixins/WithKita.d.ts",
+			"default": "./dist/mixins/WithKita.js"
+		},
+		"./tools/stringifyAttribute": {
+			"types": "./dist/tools/stringifyAttribute.d.ts",
+			"default": "./dist/tools/stringifyAttribute.js"
+		}
+	},
 	"dependencies": {
 		"@kitajs/html": "^4.1.0",
 		"@kitajs/ts-html-plugin": "^4.0.1"
+	},
+	"devDependencies": {
+		"bun-types": "latest",
+		"tsc-alias": "1.8.10"
 	}
 }
