--- a/packages/lite-elements/tsconfig.json
+++ b/packages/lite-elements/tsconfig.json
@@ -13,7 +13,7 @@
 		"jsxImportSource": "@kitajs/html",
 		"target": "ESNext",
 		"module": "ESNext",
-		"moduleResolution": "Bundler",
+		"moduleResolution": "node",
 		"noImplicitOverride": true,
 		"paths": {
 			"@/*": ["./src/*"]
