feat(#26): Create a ref decorator for querying elements with a data-ref attribute

--- a/packages/lite-elements/package.json
+++ b/packages/lite-elements/package.json
@@ -69,6 +69,10 @@
 			"types": "./dist/decorators/reactive-prop.d.ts",
 			"import": "./dist/decorators/reactive-prop.js"
 		},
+		"./decorators/ref": {
+			"types": "./dist/decorators/ref.d.ts",
+			"import": "./dist/decorators/ref.js"
+		},
 		"./mixins/with-kita": {
 			"types": "./dist/mixins/with-kita.d.ts",
 			"import": "./dist/mixins/with-kita.js"
