feat(#33): Added unit test for the following packages: core, decorators, utils

--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
 		"clean": "rm -rf .eco node_modules bun.lockb && bun install && bun run prepare:lib",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
-		"lint-staged": "lint-staged"
+		"lint-staged": "lint-staged",
+		"test:core": "bun run --filter @eco-pages/core test:lib",
+		"test:lite-elements": "bun run --filter @eco-pages/lite-elements test:lib",
+		"test:all": "bun run test:core && bun run test:lite-elements > out.log"
 	},
 	"devDependencies": {
 		"husky": "^9.0.10",
