--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -17,5 +17,8 @@
 		"tailwindcss": "^3.4.1",
 		"@lit-labs/ssr": "^3.2.2"
 	},
-	"repository": "https://github.com/andeeplus/eco-pages.git"
+	"repository": "https://github.com/andeeplus/eco-pages.git",
+	"scripts": {
+		"test:lib": "bun test --coverage"
+	}
 }
