--- a/package.json
+++ b/package.json
@@ -27,13 +27,10 @@
 		"build:react-app": "bun run --filter @ecopages/react-app build",
 		"start:react-app": "bun run --filter @ecopages/react-app start",
 		"preview:react-app": "bun run --filter @ecopages/react-app preview",
-		"prepare:lib": "bun run --filter @ecopages/scripts-injector --filter @ecopages/radiant build:lib",
-		"clean": "rm -rf .eco node_modules bun.lockb && bun install && bun run prepare:lib",
+		"clean": "rm -rf .eco node_modules bun.lockb && bun install",
 		"format": "bunx @biomejs/biome format --write .",
 		"lint": "bunx @biomejs/biome check --apply .",
-		"lint-staged": "lint-staged",
-		"test:core": "bun run --filter @ecopages/core test:lib",
-		"test:all": "bun run test:core"
+		"lint-staged": "lint-staged"
 	},
 	"devDependencies": {
 		"husky": "^9.0.10",
