feat(#44): updated packages.json references

--- a/apps/radiant-ui/package.json
+++ b/apps/radiant-ui/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/radiant-ui",
-	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "ecopages dev",
 		"build": "ecopages build",
