--- a/apps/docs-radiant/package.json
+++ b/apps/docs-radiant/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/docs-radiant",
-	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "ecopages dev",
 		"build": "ecopages build",
