--- a/examples/playground/package.json
+++ b/examples/playground/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@ecopages/playground",
-	"version": "0.0.1",
+	"private": true,
 	"scripts": {
 		"dev": "ecopages dev",
 		"build": "ecopages build",
