--- a/packages/integrations/mdx/package.json
+++ b/packages/integrations/mdx/package.json
@@ -2,10 +2,17 @@
 	"name": "@ecopages/mdx",
 	"version": "0.0.1",
 	"main": "./src/index.ts",
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/ecopages/ecopages.git",
+		"directory": "packages/integrations/mdx"
+	},
 	"dependencies": {
-		"@ecopages/core": "workspace:*",
 		"@kitajs/html": "^4.1.0",
 		"@kitajs/ts-html-plugin": "^4.0.1"
 	},
-	"repository": "https://github.com/andeeplus/ecopages.git"
+	"peerDependencies": {
+		"@ecopages/core": "workspace:*"
+	}
 }
