feat(#44): added integration packages build esm step via tsup

--- a/examples/react-app/package.json
+++ b/examples/react-app/package.json
@@ -10,10 +10,11 @@
 	"devDependencies": {
 		"@ecopages/core": "workspace:*",
 		"@ecopages/react": "workspace:*",
-		"@ecopages/lit": "workspace:*",
 		"@ecopages/mdx": "workspace:*",
 		"@types/react": "npm:types-react@beta",
-		"@types/react-dom": "npm:types-react-dom@beta"
+		"@types/react-dom": "npm:types-react-dom@beta",
+		"react": "^19.0.0-beta-26f2496093-20240514",
+		"react-dom": "^19.0.0-beta-26f2496093-20240514"
 	},
 	"overrides": {
 		"@types/react": "npm:types-react@beta",
